--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/network": "^7.0.2",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "axios": "^1.13.0",
     "ionicons": "^7.0.0",
     "jeep-sqlite": "^2.8.0",
     "rxjs": "~7.8.0",
